deploy: b3b631ead2412c9824d44d20ef1e4b840674702d

--- a/rhoso-intro/1/ch1-intro/index.html
+++ b/rhoso-intro/1/ch1-intro/index.html
@@ -142,11 +142,15 @@
 </aside>
 <article class="doc">
 <h1 class="page">Introduction to Red Hat OpenStack</h1>
-<div class="sect1">
-<h2 id="_objective"><a class="anchor" href="#_objective"></a>Objective</h2>
+<div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Goal</dt>
+<dd>
 <p>Describe the Red Hat OpenStack products and how they relate to other Red Hat products, partner products, upstream projects, and IT professional roles.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
