--- a/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
@@ -145,11 +145,13 @@
 <h1 class="page">OpenStack Operations and Administration Roles</h1>
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Describe the role and typical tasks performed by Red Hat OpenStack Operations personnel, and how they interact with other IT Operations roles.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
@@ -229,7 +231,7 @@ Pending review.
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s5-ui-lecture-fig-1.png" alt="s5 ui lecture fig 1">
+<img src="_images/s3-operations-lecture-fig-2.png" alt="s3 operations lecture fig 2">
 </div>
 </div>
 <div class="admonitionblock note">
@@ -260,7 +262,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s5-ui-lecture-fig-2.png" alt="s5 ui lecture fig 2">
+<img src="_images/s3-operations-lecture-fig-3.png" alt="s3 operations lecture fig 3">
 </div>
 </div>
 <div class="paragraph">
@@ -279,7 +281,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/s5-ui-lecture-fig-3.png" alt="s5 ui lecture fig 3">
+<img src="_images/s3-operations-lecture-fig-4.png" alt="s3 operations lecture fig 4">
 </div>
 </div>
 <div class="paragraph">
