--- a/rhoso-intro/1/ch1-intro/s7-review-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s7-review-quiz.html
@@ -143,11 +143,13 @@
 </aside>
 <article class="doc">
 <h1 class="page">Review Quiz: Red Hat OpenStack Operations</h1>
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Assess the learner&#8217;s understanding of the scope of OpenStack operations with Red Hat OpenStack on OpenShift.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
