--- a/rhoso-intro/1/ch2-services/index.html
+++ b/rhoso-intro/1/ch2-services/index.html
@@ -142,11 +142,13 @@
 </aside>
 <article class="doc">
 <h1 class="page">Red Hat OpenStack Services</h1>
-<div class="sect1">
-<h2 id="_objective"><a class="anchor" href="#_objective"></a>Objective</h2>
-<div class="sectionbody">
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Goal</dt>
+<dd>
 <p>Describe the user-facing services of Red Hat OpenStack Services on OpenShift.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
@@ -159,8 +161,6 @@ Work in Progress
 </td>
 </tr>
 </table>
-</div>
-</div>
 </div>
 <nav class="pagination">
   <span class="prev"><a href="../ch1-intro/s8-summary.html">Summary</a></span>
