--- a/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
@@ -145,11 +145,13 @@
 <h1 class="page">What is Red Hat OpenStack Services on OpenShift</h1>
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Describe the Red Hat OpenStack product and how it relates to the OpenStack open source project.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
