--- a/rhoso-intro/1/ch1-intro/s2-components-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz.html
@@ -145,11 +145,13 @@
 <h1 class="page">Quiz: Components of Red Hat OpenStack on OpenShift</h1>
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Identify components of the Red Hat OpenStack on OpenShift product and how a Red Hat OpenStack cluster runs application VMs.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
