--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -145,11 +145,13 @@
 <h1 class="page">Quiz: Red Hat OpenStack Operations Tasks</h1>
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Relate tasks to OpenStack administrators, operators, and other IT roles.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
