--- a/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
+++ b/rhoso-intro/1/ch2-services/s1-fundamental-lecture.html
@@ -142,11 +142,13 @@
 </aside>
 <article class="doc">
 <h1 class="page">Fundamental Services of Red Hat OpenStack</h1>
-<div class="paragraph">
-<p><strong>Objective:</strong></p>
-</div>
-<div class="paragraph">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Objective</dt>
+<dd>
 <p>Describe the OpenStack services required by typical applications and their virtual machines.</p>
+</dd>
+</dl>
 </div>
 <div class="admonitionblock warning">
 <table>
