--- a/rhoso-intro/1/ch1-intro/s6-ui-demo.html
+++ b/rhoso-intro/1/ch1-intro/s6-ui-demo.html
@@ -171,7 +171,7 @@ Work In Progress
 <h2 id="_recording"><a class="anchor" href="#_recording"></a>Recording</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This demonstration will be recorded and the video linked from here, so learners can watch the video and optionally try to replicate by themselves it in a classroom or work environment.</p>
+<p>This demonstration will be recorded and the video linked from here, so learners can watch the video and optionally try to replicate it by themselves.</p>
 </div>
 </div>
 </div>
@@ -179,10 +179,10 @@ Work In Progress
 <h2 id="_environment"><a class="anchor" href="#_environment"></a>Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There is no demo environment for now. Presenters must be able to provide their own environment, which should be a minimally configured OpenStack cluster with domains, projects, server flavors, floating ips, tenant networks, etc. It should be configured in a way that it is ready for an OpenStack operator, that is, an OpenStack user with member role in a project, to create a server instance and connect to that instance.</p>
+<p>There is no demo environment for now. Presenters must be able to provide their own environment, which should be a minimally configured OpenStack cluster with domains, projects, server flavors, floating ips, tenant networks, etc. It should be configured in a way that it is ready for an OpenStack operator, that is, an OpenStack user with member role in a few projects, to create a server instance and connect to that instance.</p>
 </div>
 <div class="paragraph">
-<p>The demo environment should also include some workloads that are visible to the operator user, that is, it&#8217;s <strong>not</strong> an empty cluster, so there are resources to list using the CLI or Horizon. The demo environment should also include an administrator user (at least a domain administrator) so we can switch between operator and administrator users and show changes in the Horizon and CLI outputs.</p>
+<p>The demo environment should also include some workloads that are visible to the operator user, that is, it&#8217;s <strong>not</strong> an empty cluster, so there are resources to list using the CLI or Horizon.</p>
 </div>
 <div class="paragraph">
 <p>The demo environment must also provide a user workstation preconfigured with the OpenStack client and a web browser to access the Horizon dashboard.</p>
