--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -160,7 +160,7 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-Work In Progress
+Pending review.
 </td>
 </tr>
 </table>
@@ -186,10 +186,10 @@ Work In Progress
 <p><i class="fa fa-square-o"></i> Upgrading RHEL to a newer minor release inside a VM.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring firewalld rules inside a RHEL VM.</p>
+<p><i class="fa fa-square-o"></i> Configuring IP routing rules for a virtual networks.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring IP routing rules for a virtual networks.</p>
+<p><i class="fa fa-square-o"></i> Configuring firewalld rules inside a RHEL VM.</p>
 </li>
 </ul>
 </div>
@@ -205,7 +205,7 @@ Work In Progress
 <p><i class="fa fa-square-o"></i> Creating new virtual networks.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Creating a new class of virtual server, with access to virtual GPUs.</p>
+<p><i class="fa fa-square-o"></i> Creating a new class of virtual server, with provides virtual GPUs.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Configuring authentication to an OpenStack cluster using an LDAP server.</p>
@@ -217,27 +217,42 @@ Work In Progress
 </div>
 </li>
 <li>
-<p>Which of the following tasks are more likely to be performed by an OpenStack Administrator, as opposed to an Storage or Network Administrator?</p>
+<p>Which of the following tasks are more likely to be performed by an OpenStack Administrator, as opposed to Systems, Storage, or Network Administrators and other IT personnel?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
 <p><i class="fa fa-square-o"></i> Adding new RHEL servers as compute nodes to an OpenStack cluster.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configure VLANs at the switch fabric.</p>
+<p><i class="fa fa-square-o"></i> Configuring VLANs at the switch fabric.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Configuring VLANs at the switch fabric to enable compute nodes to connect to those VLANs.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Installing OpenStack services on OpenShift clusters.</p>
 </li>
 </ul>
 </div>
 </li>
 <li>
-<p>Which of the following tasks are likely to NOT be required from a Red Hat OpenStack on OpenShift Administrator, as opposed to an upstream OpenStack Administrator?</p>
+<p>Which of the following tasks are likely to NOT be required from a Red Hat OpenStack on OpenShift Administrator, as opposed to the administrator of an OpenStack cluster built from upstream binaries or source code?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> Creating operating system images to boot new server instances VMs.</p>
+<p><i class="fa fa-square-o"></i> Configuring operating system images to boot new server instance VMs.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring active-passive instances of OpenStack</p>
+<p><i class="fa fa-square-o"></i> Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Installing an operating system on compute nodes, such as RHEL.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.</p>
 </li>
 </ul>
 </div>
