--- a/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
@@ -160,7 +160,7 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-Work In Progress
+Pending review.
 </td>
 </tr>
 </table>
