deploy: dca3960789ea4d742af7fba43371ec0ce8e2a3a4

--- a/rhoso-intro/1/ch2-services/index.html
+++ b/rhoso-intro/1/ch2-services/index.html
@@ -81,7 +81,13 @@
     <a class="nav-link" href="../ch1-intro/s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
     <a class="nav-link" href="../ch1-intro/s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../ch1-intro/s7-review-quiz-answers.html">Answers to the Review Quiz</a>
+  </li>
+</ul>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../ch1-intro/s8-summary.html">Summary</a>
