--- a/rhoso-intro/1/ch2-services/s3-additional-lecture.html
+++ b/rhoso-intro/1/ch2-services/s3-additional-lecture.html
@@ -198,19 +198,25 @@ Work in Progress
 <h2 id="_openstack_support_for_cloud_native_and_other_kinds_of_applications"><a class="anchor" href="#_openstack_support_for_cloud_native_and_other_kinds_of_applications"></a>OpenStack Support for Cloud-Native and Other Kinds of Applications</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>It is not uncommon to use OpenStack (and other cloud platforms, for that matter) to just replicate, in a virtual infrastructure, the same servers, networks, etc you would manage in a data center with physical servers and no virtualization. For some organizations, just switching from days or weeks to provision physical machines to minutes to provision virtual machines (as long as your cluster has capacity to spare) is already sufficient benefit. These organizations might be happy with just the fundamental OpenStack services.</p>
+<p>It is not uncommon to use OpenStack (and public cloud platforms, for that matter) to just replicate, in a virtual infrastructure, the same servers, networks, etc you would manage in a data center with physical servers and no virtualization. For some organizations, just switching from days or weeks of provisioning physical machines to minutes of provisioning virtual machines (as long as your cluster has capacity to spare) is already enough benefit. These organizations might be happy with just the fundamental OpenStack services.</p>
 </div>
 <div class="paragraph">
 <p>But many benefits from using private clouds come from designing applications to take advantage of the dynamic, on-demand infrastructure that clouds platforms can provide, and from automating provisioning and management of such applications.</p>
 </div>
 <div class="paragraph">
-<p>Even if an organization is not yet designing applications and their operational processes to be cloud-native, the fact that provisioning basic server, networking, and storage infrastructure became easier enables IT teams to focus on other non-functional requirements, such as security and horizontal scalability. And OpenStack helps addressing those requirements.</p>
+<p>Even if an organization is not yet designing applications and their operational processes to be cloud-native, the fact that provisioning basic server, networking, and storage infrastructure became faster enables IT teams to focus on other non-functional requirements, such as security and horizontal scalability. OpenStack helps addressing those requirements.</p>
+</div>
+<div class="paragraph">
+<p>[ Ilustrative figure of the additional services, maybe of all services, with the non-additional grayed out ]</p>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_additional_openstack_services_for_storage"><a class="anchor" href="#_additional_openstack_services_for_storage"></a>Additional OpenStack Services for Storage</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>Besides Cinder, Red Hat OpenStack Services on OpenShift offers two other services to store data:</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -221,8 +227,47 @@ Work in Progress
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>Almost all workloads use Block storage from Cinder because server instances need virtual disks, but those virtual disks are not sufficient for all kinds of workloads. Some workloads require shared file systems, and the use of networked file sharing services, such as like NFS, is very common for scaling applications to multiple servers or integrating different applications by sharing data files.</p>
+</div>
+<div class="paragraph">
+<p>Public cloud started without file sharing services, but offering object storage as an alternative, which made it very popular among cloud-native applications and on the business backends of mobile applications. Object storage also enables scaling applications to multiple servers and integrating different applications by sharing object files.</p>
+</div>
+<div class="paragraph">
+<p>For end users, object storage may look just like file storage: <strong>buckets</strong> or <strong>containers</strong> are folders or directories, and <strong>objects</strong> are files. But, from a developer&#8217;s perspective, they are very different. For example, objects support write-once semantics and versioning, but files support append and random access modes.</p>
+</div>
+<div class="paragraph">
+<p>In the end, applications are typically designed to use either of them (file or object storage) and cannot be easily configured to use the other. This course is not intended to provide a comparision of the benefits and capabilities of object versus file storage: from the perspective of OpenStack Operators, the decision was already made, and their job is to provide whatever of these capabilities applications require.</p>
+</div>
 <div class="sect2">
-<h3 id="_additional_openstack_services_for_networking"><a class="anchor" href="#_additional_openstack_services_for_networking"></a>Additional OpenStack Services for Networking</h3>
+<h3 id="_openstack_file_shares_manila"><a class="anchor" href="#_openstack_file_shares_manila"></a>OpenStack File Shares: Manila</h3>
+<div class="paragraph">
+<p>Manila offers access to remote file <strong>shares</strong> using a variety of network protocols, according to the capabilities of the storage backends configured on your OpenStack cluster. Typical business requirements, such as high availability of data by replication, depends on the storage backend rather than on OpenStack.</p>
+</div>
+<div class="paragraph">
+<p>The role of Manila is providing a uniform interface for making file shares avaibale to application VMs, so an OpenStack Operator does not need direct acces to the storage backends themselves and their proprietary administration interfaces. Depending on the backend, Manila may also abstract networking and authentication details, making it look like the file share exists inside the virtual tenant network.</p>
+</div>
+<div class="paragraph">
+<p>Manila does not abstract the file sharing protocol itself: if an application VM expects a remote NFS share, Manila must be configured to provide NFS services. Besides, it is outside the scope of Manila to abnstract file system security, such as uid, gid, and permission masks of POSIX files.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_openstack_objects_swift"><a class="anchor" href="#_openstack_objects_swift"></a>OpenStack Objects: Swift</h3>
+<div class="paragraph">
+<p>Swift offers object storage capabilities similar to Amazon S3. S3 is a de-facto standard, supported by a large number of storage vendors and applications, but there is no formal specification nor interoperability test suite to show objectively if two S3 products from different vendors are similar or different in capabilities. Unfortunately, there is no way any vendor can tell, except by extensive testing, if one application works fine with the S3 API implementation of specific a storage vendor.</p>
+</div>
+<div class="paragraph">
+<p>Swift has its own application API, but it never got close to the popularity of Amazon S3. Most strage backends certified for Red Hat OpenStack offer both the Swift and S3 APIs, and an OpenStack Operator can manage object storage using Swift while applications access that storage using S3. Which is already good because most storage vendors do a good job of emulating the S3 API from the perspective of applications but require their own proprietary administration interfaces, so Swift can abstract these interfaces for an OpenStack Operator.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_additional_openstack_services_for_networking"><a class="anchor" href="#_additional_openstack_services_for_networking"></a>Additional OpenStack Services for Networking</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Besides Nova, two services of Red Hat OpenStack Services on OpenShift offer networking capabilities:</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -233,12 +278,35 @@ Work in Progress
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>These services enable dynamic and scalable applications, not tied to manually configured IP address and DNS names: New applications can be immediately accessible using a human-readable name, and multiple servers accessed using a single IP address. If used together, the human-readable name, or vanity name, can point to the single IP address.</p>
+</div>
+<div class="sect2">
+<h3 id="_openstack_network_load_balancing_octavia"><a class="anchor" href="#_openstack_network_load_balancing_octavia"></a>OpenStack Network Load Balancing: Octavia</h3>
+<div class="paragraph">
+<p>Octavia enables fronting a <strong>server group</strong> or server <strong>pool</strong> with a single IP address, and forwarding network requests to any server of the group. This enables scalable and high-available applications, because more servers can handle more load, and servers can run in different compute nodes, insulating application users from failures of those compute nodes and of individual server instances.</p>
+</div>
+<div class="paragraph">
+<p>Octavia also works with Nova to enable autoscaling of server groups, so the number of servers grows and shrinks according to demand. Octavia can work on both Layer 3, as a pure IP load balancer, or at Layer 7, as an HTTP and TLS load balancer. In either case, Octavia can detect failures internal to server instances, such as when an applications becomes unresponsive, and stop sending sending traffic to those instances.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_openstack_dynamic_dns_designate"><a class="anchor" href="#_openstack_dynamic_dns_designate"></a>OpenStack Dynamic DNS: Designate</h3>
+<div class="paragraph">
+<p>The DNS protocol is one of the oldest standards of the Internet, but management of DNS servers is totally proprietary. Octavia offers OpenStack Operators with a standard interface for managing DNS zones and records, and also integration with Nova, Neutron, and Octavia, to automatically assign DNS names to resources such as server instances, floating IP addresses, and load balancers.</p>
+</div>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_additional_openstack_services_for_automation"><a class="anchor" href="#_additional_openstack_services_for_automation"></a>Additional OpenStack Services for Automation</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>In the traditional data center world, each server is unique. Once you install all software and perform all configuration changes on that server, it&#8217;s time-consuming and error-prone to replicate the same state in another server. In the cloud native world, IT personal strives to automate those configurations so it&#8217;s easy and fast to reproduce the state of a server to the point it is ready for its end-users.</p>
+</div>
+<div class="paragraph">
+<p>To support automation of workloads, Red Hat OpenStack Services on OpenShift adds to Nova and Glance the following services:</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -248,6 +316,64 @@ Work in Progress
 <p>Placement service: Placement</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>The first service (Heat) automates the creation and management of many OpenStack API resources, such as servers, networks, volumes, and load balancers, required to deploy complex application workloads. The second (Placement) address the distribution of those resources, especially servers, over different compute nodes to address performance and reliability requirements.</p>
+</div>
+<div class="sect2">
+<h3 id="_openstack_workload_orchestration_heat"><a class="anchor" href="#_openstack_workload_orchestration_heat"></a>Openstack Workload Orchestration: Heat</h3>
+<div class="paragraph">
+<p>OpenStack Glance provides a first step towards reproducibility, by enabling storage and reuse of server images to create multiple clones of the same server. Nova&#8217;s support for cloud-init provides another piece, by enabling each of those servers to get unique configurations, such as different static IP addresses and SSH keys.</p>
+</div>
+<div class="paragraph">
+<p>But application workloads are rarely contained in a single server instance. Most real-world applications are composed of multiple VMs, for example the traditional three-tier architecture of persentation, business, and persistence, which could be realised as:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Presentation: Web server with static HTML pages and JavaScript code.</p>
+</li>
+<li>
+<p>Business: Java application server, or web server running REST API endpoints using Java, Node.js, Ruby, or whatever you programming language runtime of choice.</p>
+</li>
+<li>
+<p>Persistence: A relation or noSQL database server.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>It is also very common that each of those tiers consists of multiple servers, for example a web server farm or replicated primary (read-write) and secondary (read-only) database instances.</p>
+</div>
+<div class="paragraph">
+<p>And those server instances need network connectivity, firewall rules, load balancers, and human-readable names for their end-user web pages and REST API entry points. Manually creating and configuring all OpenStack API resources required by such applications can be a daunting tasks!</p>
+</div>
+<div class="paragraph">
+<p>OpenStack Heat enables defining all those resources using a Heat <strong>template</strong> with YAML syntax. Heat also maintains the relationship between templates and the resources created from them, so these resources can be changed and deleted from the templates instead of manually using the OpenStack APIs for each resource type.</p>
+</div>
+<div class="paragraph">
+<p>Heat templates can be parametrized, enabling reuse of the same template in different scenarios, such as different user-facing application URLs, different IP addresses for external resources, and different sizes of server instances and storage volumes.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_openstack_server_scheduling_placement"><a class="anchor" href="#_openstack_server_scheduling_placement"></a>OpenStack Server Scheduling: Placement</h3>
+<div class="paragraph">
+<p>The OpenStack Placement service is differnet than other services introduced so far because OpenStack Operators do not interact directly with it, but indirectly throuhg resources of other services such as Nova.</p>
+</div>
+<div class="paragraph">
+<p>The Placement service tracks compute resource availability and consuption throgout an OpenStack cluster, and enables other OpenStack services to define and track different kinds of resources. For example, Nova defines number of CPU cores and memory of compute nodes, and server instances consume those resources. Neutron defines number of IP address of internal virtual networks and of floating IP address available for connectivity with external networks. Cinder defines the total disk space and number of logical units (LUNs) of each storage backend.</p>
+</div>
+<div class="paragraph">
+<p>OpenStack API resources can consume compute resources from different OpenStack services. For example, server instances consume CPU and memory from compute nodes, IP addresses from virtual networks, and disk space from a storage backend. If there are no sufficient compute resources available in the cluster, you cannot create the API resource.</p>
+</div>
+<div class="paragraph">
+<p>Thanks to Placement, Nova can run each server instance in a compute node with sufficient available compute reources for that instance.</p>
+</div>
+<div class="paragraph">
+<p>Placement also enables the definition of new classes of compute resources, for example: the availability of GPUs in compute nodes. Then server instances can request a number of GPUs, and an OpenStack Operator can be sure that instance either gets the GPUs it needs, or fails to start.</p>
+</div>
+<div class="paragraph">
+<p>Defining classse of compute resources is usually an OpenStack Admninistrator task, while configuring workloads to consume compute resources from those classes is an OpenStack Operator task.</p>
+</div>
 </div>
 </div>
 </div>
